syntax = "proto3";

package webitel.chat.bot;

option go_package = "github.com/webitel/chat_manager/api/proto/bot";

import "chat.proto";
import "message.proto";

service BotService {
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse) {}
  rpc AddProfile(AddProfileRequest) returns (AddProfileResponse) {}
  rpc DeleteProfile(DeleteProfileRequest) returns (DeleteProfileResponse) {}
}

message SendMessageRequest {
  // recepient identification ...
  string external_user_id = 1;
  int64 profile_id = 2;
  // int64 conversation_id = 3;
  webitel.chat.server.Message message = 4;
}

message SendMessageResponse {
  // // webitel.chat.server.Error error = 1;
  // webitel.chat.server.Message message = 1;
  map<string,string> bindings = 1; // SENT message binding variables
}

message AddProfileRequest {
  webitel.chat.server.Profile profile = 1;
}

message AddProfileResponse {
  //webitel.chat.server.Error error = 1;
}

message DeleteProfileRequest {
  int64 id = 1;
  string url_id = 2;
}

message DeleteProfileResponse {
  //webitel.chat.server.Error error = 1;
}